--- a/React/ts-project/ts-react-app/package.json
+++ b/React/ts-project/ts-react-app/package.json
@@ -10,8 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "antd": "^4.5.1",
+    "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^1.0.0",
+    "http-proxy-middleware": "^1.0.5",
+    "http-serve": "^1.0.1",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
