--- a/ssr服务端渲染/my-vue-app/package.json
+++ b/ssr服务端渲染/my-vue-app/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "vue": "^3.0.5"
+    "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
