--- a/ssr服务端渲染/my-vue-app/package.json
+++ b/ssr服务端渲染/my-vue-app/package.json
@@ -1,18 +1,25 @@
 {
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "build:client": "vue-cli-service build",
+    "build:server": "cross-env WEBPACK_TARGET=node vue-cli-service build",
+    "build": "npm run build:server && npm run build:client"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "vue": "^2.6.14",
+    "vue-router": "^3.5.1",
     "vue-server-renderer": "^2.6.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.3",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.3.7"
+    "cross-env": "^7.0.3",
+    "lodash.merge": "^4.6.2",
+    "serve-favicon": "^2.5.0",
+    "vite": "^2.3.7",
+    "webpack-node-externals": "^3.0.0"
   }
 }
