--- a/Webpack/loder-webpack/package.json
+++ b/Webpack/loder-webpack/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "loader-utils": "^2.0.0",
+    "schema-utils": "^3.0.0",
     "webpack": "4.x",
     "webpack-cli": "3.x"
   }
